--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Get, Set and Watch Speaker/Microphone Volume on Windows",
   "main": "dist/index.js",
   "scripts": {
-    "test": "npm i && node sample",
+    "test": "jest",
     "babel": "npx babel src --out-dir dist",
     "build": "node-gyp build",
     "debug": "node-gyp --debug configure build",
@@ -31,7 +31,11 @@
   ],
   "devDependencies": {
     "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.3.4",
-    "@babel/preset-env": "^7.3.4"
+    "@babel/core": "^7.12.13",
+    "@babel/plugin-transform-runtime": "^7.12.15",
+    "@babel/preset-env": "^7.12.13",
+    "@babel/runtime": "^7.12.13",
+    "babel-jest": "^26.6.3",
+    "jest": "^26.6.3"
   }
 }
