add: mp4 recorder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,12 +22,13 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
-set(CMAKE_BUILD_WITH_INSTALL_RPATH ON)
 if(APPLE)
     set(CMAKE_INSTALL_RPATH "@executable_path")
 else()
     set(CMAKE_INSTALL_RPATH "$ORIGIN:$ORIGIN/..")
 endif()
+
+option(BUILD_WEBM_DLL "build webm shared library" ON)
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
@@ -36,31 +37,24 @@ if(WIN32)
   set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
 endif()
 
-add_subdirectory(libwebm)
-
-find_package(FFmpeg REQUIRED)
+find_package(FFMPEG REQUIRED)
 find_package(OpenSSL REQUIRED)
-
-if (WIN32)
 find_package(fmt CONFIG REQUIRED)
-else()
-add_subdirectory(third_party/fmt)
-endif()
 
-add_definitions(-DNAPI_VERSION=4)
+add_definitions(-DNAPI_VERSION=8)
 include_directories(${CMAKE_JS_INC})
 include_directories(${FFMPEG_INCLUDE_DIRS})
 link_directories(${FFMPEG_LIBRARY_DIRS})
 link_libraries(${FFMPEG_LIBRARIES})
 
+
 # Include N-API wrappers
 execute_process(COMMAND node -p "require('node-addon-api').include"
-        WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
-        OUTPUT_VARIABLE NODE_ADDON_API_DIR
-        )
+                WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+                OUTPUT_VARIABLE NODE_ADDON_API_DIR
+                )
 string(REPLACE "\n" "" NODE_ADDON_API_DIR ${NODE_ADDON_API_DIR})
 string(REPLACE "\"" "" NODE_ADDON_API_DIR ${NODE_ADDON_API_DIR})
-
 
 file(GLOB SOURCE_FILES "src/*.cc" "src/*.c" "src/webvtt/*.cc")
 
@@ -82,43 +76,45 @@ set(FFMPEG_SRC
   )
 set(FFPROBE_SRC src/ffprobe.c src/cmdutils.c src/opt_common.c)
 
-if(WIN32)
+if(MSVC)
   add_definitions(/wd4706 /wd4819 /wd4701 /wd4703)
-endif(WIN32)
+endif(MSVC)
 
 add_executable(ffprobe ${FFPROBE_SRC})
+target_compile_options(ffprobe PRIVATE /experimental:c11atomics)
 target_include_directories(ffprobe PRIVATE src src/compat)
-if(WIN32)
-  target_compile_options(ffprobe PRIVATE /experimental:c11atomics /std:c11)
-else()
-  target_compile_options(ffprobe PRIVATE -D_POSIX_C_SOURCE=200809L)
-  target_link_libraries(ffprobe PRIVATE m)
-endif(WIN32)
 
 add_executable(ffmpeg ${FFMPEG_SRC})
+target_compile_options(ffmpeg PRIVATE /experimental:c11atomics)
 target_include_directories(ffmpeg PRIVATE src src/compat)
-if(WIN32)
-target_compile_options(ffmpeg PRIVATE /experimental:c11atomics /std:c11)
-else()
-target_link_libraries(ffmpeg PRIVATE m pthread)
-endif(WIN32)
+if(MSVC)
+  target_compile_options(ffprobe PRIVATE /wd4100 /wd4389 /wd4244)
+  target_compile_options(ffmpeg PRIVATE /wd4100 /wd4389 /wd4244)
+
+add_subdirectory(libwebm)
 
 add_library(${PROJECT_NAME} SHARED ${SOURCE_FILES} ${CMAKE_JS_SRC})
 target_compile_definitions(${PROJECT_NAME} PRIVATE BUILD_DLL NAPI_DISABLE_CPP_EXCEPTIONS)
 target_include_directories(${PROJECT_NAME} PRIVATE . libwebm src)
-target_link_libraries(${PROJECT_NAME} ${CMAKE_JS_LIB} webm fmt::fmt-header-only)
+target_link_libraries(${PROJECT_NAME} PRIVATE ${CMAKE_JS_LIB} webm fmt::fmt-header-only avcpp)
+if (WIN32)
+  target_link_libraries(${PROJECT_NAME} PRIVATE delayimp.lib)
+endif()
 target_include_directories(${PROJECT_NAME} PRIVATE ${NODE_ADDON_API_DIR})
 set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "" SUFFIX ".node")
-if(WIN32)
-target_compile_options(${PROJECT_NAME} PRIVATE /experimental:c11atomics /std:c11)
-endif(WIN32)
+target_compile_options(${PROJECT_NAME} PRIVATE /experimental:c11atomics)
 
-add_library(webmdll SHARED 
-    "src/webvtt/vttreader.cc" "src/webvtt/webvttparser.cc" "src/webm_muxer.cc" "src/sample_muxer_metadata.cc"
-)
-set_target_properties(webmdll PROPERTIES OUTPUT_NAME "webm")
-target_link_libraries(webmdll webm)
-target_include_directories(webmdll PRIVATE . libwebm)
+if (BUILD_WEBM_DLL)
+  add_library(webmdll SHARED
+      "src/webvtt/vttreader.cc" "src/webvtt/webvttparser.cc" "src/webm_muxer.cc" "src/sample_muxer_metadata.cc"
+  )
+  set_target_properties(webmdll PROPERTIES RUNTIME_OUTPUT_NAME "webm")
+  target_link_libraries(webmdll webm)
+  target_include_directories(webmdll PRIVATE . libwebm)
+endif()
+
+add_subdirectory(src/avcpp)
+add_subdirectory(sample)
 
 if(MSVC AND CMAKE_JS_NODELIB_DEF AND CMAKE_JS_NODELIB_TARGET)
   # Generate node.lib
