fix: build errors on Windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,13 @@ cmake_minimum_required(VERSION 3.27)
 
 project(audio)
 
-set(ENABLE_SAMPLE_PROGRAMS OFF CACHE BOOL "")
+# if (DEFINED ENV{VCPKG_ROOT}) message(STATUS "Using
+# VCPKG_ROOT=$ENV{VCPKG_ROOT}")
+# include("$ENV{VCPKG_ROOT}/scripts/buildsystems/vcpkg.cmake") endif()
+
+set(ENABLE_SAMPLE_PROGRAMS
+    OFF
+    CACHE BOOL "")
 
 set(CMAKE_CXX_VISIBILITY_PRESET hidden)
 set(CMAKE_VISIBILITY_INLINES_HIDDEN 1)
@@ -11,14 +17,13 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
 if(APPLE)
-    set(CMAKE_INSTALL_RPATH "@executable_path")
+  set(CMAKE_INSTALL_RPATH "@executable_path")
 else()
-    set(CMAKE_INSTALL_RPATH "$ORIGIN:$ORIGIN/..")
+  set(CMAKE_INSTALL_RPATH "$ORIGIN:$ORIGIN/..")
 endif()
 
 option(BUILD_WEBM_DLL "build webm shared library" ON)
-option(ENABLE_FFMPEG  "build with ffmpeg library" ON)
-
+option(ENABLE_FFMPEG "build with ffmpeg library" ON)
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
@@ -27,37 +32,39 @@ if(WIN32)
   set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
 endif()
 
-if (ENABLE_FFMPEG)
-find_package(FFMPEG REQUIRED)
+if(ENABLE_FFMPEG)
+  find_package(FFMPEG REQUIRED)
 endif(ENABLE_FFMPEG)
 
-find_package(OpenSSL REQUIRED)
-find_package(fmt REQUIRED)
+# find_package(OpenSSL REQUIRED) find_package(fmt CONFIG REQUIRED)
 
 add_definitions(-DNAPI_VERSION=8)
 include_directories(${CMAKE_JS_INC})
 
-
-if (ENABLE_FFMPEG)
-include_directories(${FFMPEG_INCLUDE_DIRS})
-link_directories(${FFMPEG_LIBRARY_DIRS})
-link_libraries(${FFMPEG_LIBRARIES})
+if(ENABLE_FFMPEG)
+  include_directories(${FFMPEG_INCLUDE_DIRS})
+  link_directories(${FFMPEG_LIBRARY_DIRS})
+  link_libraries(${FFMPEG_LIBRARIES})
 endif(ENABLE_FFMPEG)
 
 # Include N-API wrappers
-execute_process(COMMAND node -p "require('node-addon-api').include"
-                WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
-                OUTPUT_VARIABLE NODE_ADDON_API_DIR
-                )
+execute_process(
+  COMMAND node -p "require('node-addon-api').include"
+  WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+  OUTPUT_VARIABLE NODE_ADDON_API_DIR)
 string(REPLACE "\n" "" NODE_ADDON_API_DIR ${NODE_ADDON_API_DIR})
 string(REPLACE "\"" "" NODE_ADDON_API_DIR ${NODE_ADDON_API_DIR})
 
 file(GLOB SOURCE_FILES "src/webvtt/*.cc")
-list(APPEND SOURCE_FILES
-   src/audio-napi.cc
-   src/napi_help.cc
-   src/webm_muxer.cc
-)
+list(
+  APPEND
+  SOURCE_FILES
+  src/audio-napi.cc
+  src/napi_help.cc
+  src/webm_muxer.cc
+  src/webvtt/vttreader.cc
+  src/webvtt/webvttparser.cc
+  src/sample_muxer_metadata.cc)
 
 set(FFMPEG_SRC
     src/ffmpeg.c
@@ -73,102 +80,138 @@ set(FFMPEG_SRC
     src/sync_queue.c
     src/thread_queue.c
     src/cmdutils.c
-    src/opt_common.c
-  )
+    src/opt_common.c)
 set(FFPROBE_SRC src/ffprobe.c src/cmdutils.c src/opt_common.c)
 
-
-if (ENABLE_FFMPEG)
-  list(APPEND SOURCE_FILES $(FFPROBE_SRC) $(FFMPEG_SRC))
-  list(APPEND SOURCE_FILES src/av_api.cc  src/screen_capturer.cc  src/recorder_api.cc
-        src/combine.cc)
+if(ENABLE_FFMPEG)
+  list(APPEND SOURCE_FILES ${FFPROBE_SRC} ${FFMPEG_SRC})
+  list(
+    APPEND
+    SOURCE_FILES
+    src/av_api.cc
+    src/screen_capturer.cc
+    src/recorder_api.cc
+    src/duration.c
+    src/combine.cc
+    src/buffer_io.c
+    src/get_volume.c)
 endif(ENABLE_FFMPEG)
 
 if(MSVC)
   add_definitions(/wd4706 /wd4819 /wd4701 /wd4703)
 endif(MSVC)
 
-if (ENABLE_FFMPEG)
+if(ENABLE_FFMPEG)
   add_executable(ffprobe ${FFPROBE_SRC})
   target_include_directories(ffprobe PRIVATE src src/compat)
 
-  add_executable(ffmpeg ${FFMPEG_SRC})
-  target_include_directories(ffmpeg PRIVATE src src/compat)
+  # add_executable(ffmpeg ${FFMPEG_SRC}) target_include_directories(ffmpeg
+  # PRIVATE src src/compat)
   if(MSVC)
-    target_compile_options(ffmpeg PRIVATE /experimental:c11atomics)
-    target_compile_options(ffprobe PRIVATE /experimental:c11atomics)
+    # target_compile_options(ffmpeg PRIVATE /experimental:c11atomics /std:c11)
+    target_compile_options(ffprobe PRIVATE /experimental:c11atomics /std:c11)
     target_compile_options(ffprobe PRIVATE /wd4100 /wd4389 /wd4244)
-    target_compile_options(ffmpeg PRIVATE /wd4100 /wd4389 /wd4244)
+    # target_compile_options(ffmpeg PRIVATE /wd4100 /wd4389 /wd4244)
   endif(MSVC)
 
-
   add_subdirectory(src/avcpp)
-# add_subdirectory(sample)
+  # add_subdirectory(sample)
 endif(ENABLE_FFMPEG)
 
-add_subdirectory(libwebm)
+if(BUILD_WEBM_DLL)
+  add_subdirectory(libwebm)
+endif(BUILD_WEBM_DLL)
 
 add_library(${PROJECT_NAME} SHARED ${SOURCE_FILES} ${CMAKE_JS_SRC})
-target_compile_definitions(${PROJECT_NAME} PRIVATE BUILD_DLL NAPI_DISABLE_CPP_EXCEPTIONS)
-target_include_directories(${PROJECT_NAME} PRIVATE . libwebm src)
-target_link_libraries(${PROJECT_NAME} PRIVATE ${CMAKE_JS_LIB} webm fmt::fmt)
-if (WIN32)
-  target_compile_options(${PROJECT_NAME} PRIVATE /experimental:c11atomics)
+target_compile_definitions(${PROJECT_NAME} PRIVATE BUILD_DLL
+                                                   NAPI_DISABLE_CPP_EXCEPTIONS)
+target_include_directories(${PROJECT_NAME} PRIVATE libwebm src)
+target_link_libraries(${PROJECT_NAME} PRIVATE ${CMAKE_JS_LIB} webm)
+
+if(WIN32)
+  target_compile_options(${PROJECT_NAME} PRIVATE /experimental:c11atomics
+                                                 /std:c11)
   target_link_libraries(${PROJECT_NAME} PRIVATE delayimp.lib)
 endif()
-if (ENABLE_FFMPEG)
+if(ENABLE_FFMPEG)
   target_compile_definitions(${PROJECT_NAME} PRIVATE ENABLE_FFMPEG)
+  target_include_directories(${PROJECT_NAME} PRIVATE ./src/compat)
   target_link_libraries(${PROJECT_NAME} PRIVATE avcpp)
 endif()
 target_include_directories(${PROJECT_NAME} PRIVATE ${NODE_ADDON_API_DIR})
-set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "" SUFFIX ".node")
 
-if (BUILD_WEBM_DLL)
-  set(WEBMDLL "webmdll")
-  add_library(${WEBMDLL} SHARED
-      "src/webvtt/vttreader.cc" "src/webvtt/webvttparser.cc" "src/webm_muxer.cc" "src/sample_muxer_metadata.cc"
-  )
-  set_target_properties(${WEBMDLL} PROPERTIES OUTPUT_NAME "webm")
-  target_link_libraries(${WEBMDLL} webm)
-  target_include_directories(${WEBMDLL} PRIVATE . libwebm)
+if(ENABLE_FFMPEG)
+  set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "" SUFFIX ".node")
+else()
+  set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "" SUFFIX
+                                                             "-noffmpeg.node")
 endif()
 
+if(BUILD_WEBM_DLL)
+  set(WEBMDLL "webmdll")
+  add_library(
+    ${WEBMDLL} SHARED
+    "src/webm_muxer.cc" "src/webvtt/vttreader.cc" "src/webvtt/webvttparser.cc"
+    "src/sample_muxer_metadata.cc")
+  target_link_libraries(${WEBMDLL} webm)
+endif()
 
-if(MSVC AND CMAKE_JS_NODELIB_DEF AND CMAKE_JS_NODELIB_TARGET)
+if(MSVC
+   AND CMAKE_JS_NODELIB_DEF
+   AND CMAKE_JS_NODELIB_TARGET)
   # Generate node.lib
-  execute_process(COMMAND ${CMAKE_AR} /def:${CMAKE_JS_NODELIB_DEF} /out:${CMAKE_JS_NODELIB_TARGET} ${CMAKE_STATIC_LINKER_FLAGS})
+  execute_process(
+    COMMAND ${CMAKE_AR} /def:${CMAKE_JS_NODELIB_DEF}
+            /out:${CMAKE_JS_NODELIB_TARGET} ${CMAKE_STATIC_LINKER_FLAGS})
 endif()
 
 # Turn on exporting compile commands json
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-IF( EXISTS "${CMAKE_CURRENT_BINARY_DIR}/compile_commands.json" )
-  EXECUTE_PROCESS( COMMAND ${CMAKE_COMMAND} -E copy_if_different
-    ${CMAKE_CURRENT_BINARY_DIR}/compile_commands.json
-    ${CMAKE_CURRENT_SOURCE_DIR}/compile_commands.json
-  )
-ENDIF()
-
-if (ENABLE_FFMPEG)
-message(info ">>>>${ffmpeg_PACKAGE_FOLDER_RELEASE}")
-
-if (WIN32)
-  file(GLOB FFMPEG_BIN_FILES "$ENV{FFMPEG_ROOT}/bin/*.exe" "$ENV{FFMPEG_ROOT}/bin/*.dll")
-else()
-  file(GLOB FFMPEG_BIN_FILES "${ffmpeg_PACKAGE_FOLDER_RELEASE}/lib/*")
+if(EXISTS "${CMAKE_CURRENT_BINARY_DIR}/compile_commands.json")
+  execute_process(
+    COMMAND
+      ${CMAKE_COMMAND} -E copy_if_different
+      ${CMAKE_CURRENT_BINARY_DIR}/compile_commands.json
+      ${CMAKE_CURRENT_SOURCE_DIR}/compile_commands.json)
 endif()
 
-message(info ">>> COPY FFmpeg shared files: ${FFMPEG_BIN_FILES}")
+if(ENABLE_FFMPEG)
+  message(info ">>>>${ffmpeg_PACKAGE_FOLDER_RELEASE}")
 
-if (WIN32)
-  add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
-      COMMAND ${CMAKE_COMMAND} -E copy_if_different ${FFMPEG_BIN_FILES} $<TARGET_FILE_DIR:${PROJECT_NAME}>
-      DEPENDS $<TARGET_FILE_DIR:audio>/avcodec-60.dll
-    )
-else()
-  add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
-      COMMAND ${CMAKE_COMMAND} -E copy_if_different ${FFMPEG_BIN_FILES} $<TARGET_FILE_DIR:${PROJECT_NAME}>
-      DEPENDS $<TARGET_FILE_DIR:audio>
-    )
-endif()
+  if(WIN32)
+    file(GLOB FFMPEG_BIN_FILES "$ENV{FFMPEG_ROOT}/bin/*.exe"
+         "$ENV{FFMPEG_ROOT}/bin/*.dll")
+  else()
+    file(GLOB FFMPEG_BIN_FILES "${ffmpeg_PACKAGE_FOLDER_RELEASE}/lib/*")
+  endif()
+
+  message(info ">>> COPY FFmpeg shared files: ${FFMPEG_BIN_FILES}")
+
+  if(WIN32)
+    add_custom_command(
+      TARGET ${PROJECT_NAME}
+      POST_BUILD
+      COMMAND
+        ${CMAKE_COMMAND} -E copy_if_different ${FFMPEG_BIN_FILES}
+        $<TARGET_FILE_DIR:${PROJECT_NAME}> DEPENDS
+        $<TARGET_FILE_DIR:audio>/avcodec-60.dll)
+  else()
+    add_custom_command(
+      TARGET ${PROJECT_NAME}
+      POST_BUILD
+      COMMAND
+        ${CMAKE_COMMAND} -E copy_if_different ${FFMPEG_BIN_FILES}
+        $<TARGET_FILE_DIR:${PROJECT_NAME}> DEPENDS $<TARGET_FILE_DIR:audio>)
+  endif()
 endif()
 
+get_filename_component(BUILD_NAME "${CMAKE_CURRENT_BINARY_DIR}" NAME)
+set(BIN_DIR "${CMAKE_SOURCE_DIR}/bin/${BUILD_NAME}")
+
+add_custom_command(
+  TARGET audio
+  POST_BUILD
+  COMMAND ${CMAKE_COMMAND} -E make_directory ${BIN_DIR}
+  COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:audio> ${BIN_DIR}/
+  COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:${WEBMDLL}>
+          ${BIN_DIR}/webm.dll)
