--- a/src/avcpp/CMakeLists.txt
+++ b/src/avcpp/CMakeLists.txt
@@ -29,7 +29,7 @@ foreach(TARGET ${AV_TARGETS})
     find_package(ffmpeg)
     target_compile_options(${TARGET} PRIVATE ${AVCPP_WARNING_OPTIONS})
     target_compile_definitions(${TARGET} PUBLIC __STDC_CONSTANT_MACROS)
-    target_link_libraries(${TARGET} PRIVATE PUBLIC ffmpeg::ffmpeg)
+    # target_link_libraries(${TARGET} PRIVATE PUBLIC ffmpeg::ffmpeg)
     # target_link_libraries(${TARGET} PRIVATE Threads::Threads PUBLIC FFmpeg::FFmpeg)
     # target_link_libraries(${TARGET} PRIVATE Threads::Threads )
     target_include_directories(${TARGET}
