--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "speaker",
     "windows"
   ],
+  "cmake-js": {
+    "runtime": "node",
+    "runtimeVersion": "16.5.0"
+  },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.12.13",
