--- a/package.json
+++ b/package.json
@@ -25,18 +25,11 @@
     "runtime": "node",
     "runtimeVersion": "16.5.0"
   },
-  "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.12.13",
-    "@babel/plugin-transform-runtime": "^7.12.15",
-    "@babel/preset-env": "^7.12.13",
-    "@babel/runtime": "^7.12.13",
-    "babel-jest": "^26.6.3",
-    "jest": "^26.6.3",
-    "nobind17": "^1.2.0"
-  },
   "dependencies": {
     "cmake-js": "^7.3.0",
     "node-addon-api": "^8.1.0"
+  },
+  "devDependencies": {
+    "yargs": "^17.7.2"
   }
 }
